[tool.poetry]
name = "blockchain-python"
version = "0.1.0"
description = ""
authors = ["Jonathan Espiard"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.120.1"
websockets = "^15.0.1"
uvicorn = "^0.38.0"
redis = "^7.0.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
